# hrgold

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoin_find_bdb48.m4  bitcoin_qt.m4  bitcoin_subdir_to_include.m4
contrib/: README.md  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  gen-manpages.sh  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md
contrib/linearize/: README.md  example-linearize-testnet.cfg  example-linearize.cfg  linearize-data.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  generate-seeds.py  nodes_main.txt
contrib/testgen/: README.md
contrib/verify-commits/: gpg.sh  pre-push-hook.sh  verify-commits.sh
depends/: README.md
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  benchmarking.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  instantsend.md  keepass.md  masternode-budget.md  masternode_conf.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
doc/man/: Makefile.am
docker/: Dockerfile  README.md  build-docker.sh  push-docker.sh
qa/: README.md
qa/pull-tester/: rpc-tests.py  tests_config.py.in
qa/rpc-tests/: fundrawtransaction-hd.py  fundrawtransaction.py  import-rescan.py  listtransactions.py  (+9 more)
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.h  addressindex.h  addrman.h  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.h  bip39.h  bip39_english.h  blockencodings.h  bloom.h  cachemap.h  cachemultimap.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  cuckoocache.h  dbwrapper.h  dsnotificationinterface.cpp  (+105 more)
src/bench/: .gitignore  bench.h  crypto_hash.cpp  string_cast.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.h  params.h  validation.h
src/crypto/: aes.cpp  aes.h  aes_helper.c  blake.c  bmw.c  common.h  cubehash.c  groestl.c  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  keccak.c  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h  skein.c  sph_blake.h  sph_bmw.h  sph_cubehash.h  sph_groestl.h  sph_keccak.h  sph_skein.h  sph_types.h
src/crypto/ctaes/: README.md
src/policy/: fees.h  policy.h
src/primitives/: block.cpp  block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  (+43 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/res/css/: crownium.css  drkblue.css  light-hires-retro.css  light-hires.css  light-retro.css  light.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: Makefile  compattests.h  paymentservertests.h  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.cpp  client.h  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  sign.h  standard.h
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  cachemap_tests.cpp  cachemultimap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  (+27 more)
src/test/data/: README.md  bitcoin-util-test.json  proposals_invalid.json  proposals_valid.json
src/univalue/lib/: univalue_escapes.h
src/wallet/: coincontrol.h  crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+6 files in other folders)
